tests/paczka1/fuzzy1/18590804.err
Error in line 2: FxVpeGOK S777 81,3
Error in line 12: jMMrWN A642 40,2
Error in line 14: GkZBB S777 79,3
Error in line 17: GkZBB A642 77,8
Error in line 18: j3lBEQcM8S S467 79,7
Error in line 28: j3lBEQcM8S S777 89,1
Error in line 25: jMMrWN S467 59,7
